force-app/main/default/objects/malive__MALiveSetting__c/malive__MALiveSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>MapAnything Live Settings</label>
</CustomObject>