force-app/main/default/objects/malive__MALiveSetting__c/fields/malive__BatchFrequency__c.field-meta.xml
<CustomField>
    <fullName>malive__BatchFrequency__c</fullName>
    <label>Batch Frequency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>