force-app/main/default/objects/malive__MALiveSetting__c/fields/malive__CustomBatchName__c.field-meta.xml
<CustomField>
    <fullName>malive__CustomBatchName__c</fullName>
    <description>This is used to set the name of a Custom Batch class that will run after each Summary Batch. The custom batch class should implement the ScheduledDispatcher.IScheduledDispatcher interface.</description>
    <inlineHelpText>This is used to set the name of a Custom Batch class that will run after each Summary Batch. The custom batch class should implement the ScheduledDispatcher.IScheduledDispatcher interface.</inlineHelpText>
    <label>Custom Batch Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>