force-app/main/default/objects/malive__MALiveSetting__c/fields/malive__CustomBatchSize__c.field-meta.xml
<CustomField>
    <fullName>malive__CustomBatchSize__c</fullName>
    <label>Custom Batch Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>