force-app/main/default/objects/malive__MALiveSetting__c/fields/malive__SendAlertOptions__c.field-meta.xml
<CustomField>
    <fullName>malive__SendAlertOptions__c</fullName>
    <label>Send Alert Options</label>
    <length>255</length>
    <type>Text</type>
</CustomField>