force-app/main/default/objects/malive__MALiveSetting__c/fields/malive__TelematicsAlertEmail__c.field-meta.xml
<CustomField>
    <fullName>malive__TelematicsAlertEmail__c</fullName>
    <description>This is used to store the email address of an Admin who wishes to receive Telematics Alerts</description>
    <inlineHelpText>This is used to store the email address of an Admin who wishes to receive Telematics Alerts</inlineHelpText>
    <label>Telematics Alert Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>