force-app/main/default/objects/malive__MALiveSetting__c/listViews/malive__AllFields.listView-meta.xml
<ListView>
    <fullName>malive__AllFields</fullName>
    <columns>NAME</columns>
    <columns>malive__SwitchMAIOEndpoint__c</columns>
    <columns>malive__BatchFrequency__c</columns>
    <columns>malive__Version__c</columns>
    <columns>malive__TelematicsAlertEmail__c</columns>
    <columns>malive__SendAlertOptions__c</columns>
    <filterScope>Everything</filterScope>
    <label>AllFields</label>
</ListView>